--- a/.github/workflows/infra_deploy.yml
+++ b/.github/workflows/infra_deploy.yml
@@ -35,4 +35,18 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
       
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+          
+      - name: Upload templates to s3
+        run: aws s3 cp ./infra/s3.yaml s3://alexortner-cf-templates
+
+
+    
+    
+
       
