--- a/.github/workflows/infra_deploy.yml
+++ b/.github/workflows/infra_deploy.yml
@@ -32,8 +32,9 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo show files
+          ls
+          ls infra
       
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -42,8 +43,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-central-1
           
-      - name: Upload templates to s3
-        run: aws s3 cp ./infra/s3.yaml s3://alexortner-cf-templates
+      #- name: Upload templates to s3
+      #  run: aws s3 cp ./infra/s3.yaml s3://alexortner-cf-templates
 
 
     
